# ynspkg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_curl.sh
include/: package_manager.hpp
src/: main.cpp  package_manager.cpp
